Hack around logging